# qportfolio

./: Pipfile  README.md  app.py  pyproject.toml  requirements.txt  server.py  setup.py  wsgi.py
app/: main.py
templates/: home.html
